--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Apr 27 22:19:36 AST 2021
-sdk.dir=C\:\\Users\\win 7\\AppData\\Local\\Android\\Sdk
+#Wed Apr 28 16:34:48 AST 2021
+sdk.dir=C\:\\Users\\ASUS\\AppData\\Local\\Android\\Sdk
